--- a/docs/framework/migration-guide/runtime/4.6-4.7.2.md
+++ b/docs/framework/migration-guide/runtime/4.6-4.7.2.md
@@ -9,6 +9,7 @@ ms.sourcegitcommit: 54231aa56fca059e9297888a96fbca1d4cf3746c
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/25/2018
+ms.locfileid: "34549803"
 ---
 # <a name="runtime-changes-for-migration-from-net-framework-46-to-472"></a><span data-ttu-id="33e41-102">.NET Framework 4.6 から 4.7.2 への移行に関するランタイム変更</span><span class="sxs-lookup"><span data-stu-id="33e41-102">Runtime Changes for Migration from .NET Framework 4.6 to 4.7.2</span></span>
 
