--- a/docs/visual-basic/misc/bc31186.md
+++ b/docs/visual-basic/misc/bc31186.md
@@ -7,11 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31186
 ms.assetid: 14436245-1b2e-4ca9-a139-bd1d79ed9d72
-ms.openlocfilehash: 4052cd883f29e8a0f2a40af0fbbef205b1017833
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: c792f52d5043ce236a6312452a1991630b0c25e0
+ms.sourcegitcommit: 2ad7d06f4f469b5d8a5280ac0e0289a81867fc8e
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 05/04/2018
+ms.lasthandoff: 06/08/2018
+ms.locfileid: "35231451"
 ---
 # <a name="3939-is-not-allowed"></a>&#39;:&#39;は許可されていません
 ':' は使用できません。 XML 修飾名をこのコンテキストで使用することはできません。  
@@ -24,7 +25,7 @@ ms.lasthandoff: 05/04/2018
   
 -   その修飾名がある XML リテラルを削除するか、有効な場所に移動します。  
   
-     XML 名に有効な文字の詳細については、「 [拡張マークアップ言語 (XML) 1.0](http://go.microsoft.com/fwlink/?LinkId=73927)」を参照してください。  
+     についての文字は XML 名では有効で、次を参照してください。[拡張マークアップ言語 (XML) 1.0](https://www.w3.org/TR/xml)です。  
   
 ## <a name="see-also"></a>関連項目  
  [XML リテラル](../../visual-basic/language-reference/xml-literals/index.md)  
