--- a/docs/framework/migration-guide/retargeting/4.6-4.6.1.md
+++ b/docs/framework/migration-guide/retargeting/4.6-4.6.1.md
@@ -4,35 +4,36 @@ ms.date: 04/27/2018
 ms.assetid: a4490577-c2c8-4874-abf6-6d207359d5d8
 author: chlowell
 ms.author: ronpet
-ms.openlocfilehash: 06b528f01aa7215a49d972fafeb9ea8d2996fedd
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: e9515f46ca6ce08a4532c302abb4d9bf1c00cc1e
+ms.sourcegitcommit: 9e18e4a18284ae9e54c515e30d019c0bbff9cd37
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 05/04/2018
+ms.lasthandoff: 06/28/2018
+ms.locfileid: "37072151"
 ---
 # <a name="retargeting-changes-for-migration-from-net-framework-46-to-461"></a>.NET Framework 4.6 から 4.6.1 への移行に関する変更の再ターゲット
 
-[!include[versionselector](../../../../includes/migration-guide/retargeting/versionselector.md)]
+[!INCLUDE[versionselector](../../../../includes/migration-guide/retargeting/versionselector.md)]
 
-[!include[introduction](../../../../includes/migration-guide/retargeting/introduction.md)]
+[!INCLUDE[introduction](../../../../includes/migration-guide/retargeting/introduction.md)]
 
 .NET Framework 4.6 から 4.6.1 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。
 
 ## <a name="core"></a>コア
 
-[!include[Change in path separator character in FullName property of ZipArchiveEntry objects](~/includes/migration-guide/retargeting/core/change-path-separator-character-fullname-property-ziparchiveentry-objects.md)]
+[!INCLUDE[Change in path separator character in FullName property of ZipArchiveEntry objects](~/includes/migration-guide/retargeting/core/change-path-separator-character-fullname-property-ziparchiveentry-objects.md)]
 
 ## <a name="windows-communication-foundation-wcf"></a>Windows Communication Foundation (WCF)
 
-[!include[WCF binding with the TransportWithMessageCredential security mode](~/includes/migration-guide/retargeting/wcf/wcf-binding-with-transportwithmessagecredential-security-mode.md)]
+[!INCLUDE[WCF binding with the TransportWithMessageCredential security mode](~/includes/migration-guide/retargeting/wcf/wcf-binding-with-transportwithmessagecredential-security-mode.md)]
 
-[!include[X509CertificateClaimSet.FindClaims Considers All claimTypes](~/includes/migration-guide/retargeting/wcf/x509certificateclaimsetfindclaims-considers-all-claimtypes.md)]
+[!INCLUDE[X509CertificateClaimSet.FindClaims Considers All claimTypes](~/includes/migration-guide/retargeting/wcf/x509certificateclaimsetfindclaims-considers-all-claimtypes.md)]
 
 ## <a name="windows-forms"></a>Windows フォーム
 
-[!include[Application.FilterMessage no longer throws for re-entrant implementations of IMessageFilter.PreFilterMessage](~/includes/migration-guide/retargeting/winforms/applicationfiltermessage-no-longer-throws-for-re-entrant-implementations.md)]
+[!INCLUDE[Application.FilterMessage no longer throws for re-entrant implementations of IMessageFilter.PreFilterMessage](~/includes/migration-guide/retargeting/winforms/applicationfiltermessage-no-longer-throws-for-re-entrant-implementations.md)]
 
 ## <a name="windows-presentation-foundation-wpf"></a>Windows Presentation Foundation (WPF)
 
-[!include[Calls to System.Windows.Input.PenContext.Disable on touch-enabled systems may throw an ArgumentException](~/includes/migration-guide/retargeting/wpf/calls-systemwindowsinputpencontextdisable-on-touch-enabled-systems-may-throw.md)]
+[!INCLUDE[Calls to System.Windows.Input.PenContext.Disable on touch-enabled systems may throw an ArgumentException](~/includes/migration-guide/retargeting/wpf/calls-systemwindowsinputpencontextdisable-on-touch-enabled-systems-may-throw.md)]
 
