--- a/docs/framework/migration-guide/retargeting/4.6.2-4.7.1.md
+++ b/docs/framework/migration-guide/retargeting/4.6.2-4.7.1.md
@@ -4,84 +4,84 @@ ms.date: 04/27/2018
 ms.assetid: bd2beb82-c966-4b8d-9c30-d9abda7c0693
 author: chlowell
 ms.author: ronpet
-ms.openlocfilehash: 7a237cff622164d28baf4b3018de16432ae06898
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 41c533d17569207130c5eff2d1df85536c5abdd6
+ms.sourcegitcommit: 9e18e4a18284ae9e54c515e30d019c0bbff9cd37
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33396170"
+ms.lasthandoff: 06/28/2018
+ms.locfileid: "37071917"
 ---
-# <a name="retargeting-changes-for-migration-from-net-framework-462-to-471"></a><span data-ttu-id="5ef92-102">.NET Framework 4.6.2 から 4.7.1 への移行に関する変更の再ターゲット</span><span class="sxs-lookup"><span data-stu-id="5ef92-102">Retargeting Changes for Migration from .NET Framework 4.6.2 to 4.7.1</span></span>
+# <a name="retargeting-changes-for-migration-from-net-framework-462-to-471"></a><span data-ttu-id="add51-102">.NET Framework 4.6.2 から 4.7.1 への移行に関する変更の再ターゲット</span><span class="sxs-lookup"><span data-stu-id="add51-102">Retargeting Changes for Migration from .NET Framework 4.6.2 to 4.7.1</span></span>
 
-[!include[versionselector](../../../../includes/migration-guide/retargeting/versionselector.md)]
+[!INCLUDE[versionselector](../../../../includes/migration-guide/retargeting/versionselector.md)]
 
-[!include[introduction](../../../../includes/migration-guide/retargeting/introduction.md)]
+[!INCLUDE[introduction](../../../../includes/migration-guide/retargeting/introduction.md)]
 
-<span data-ttu-id="5ef92-103">.NET Framework 4.6.2 から 4.7.1 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="5ef92-103">If you are migrating from the .NET Framework 4.6.2 to 4.7.1, review the following topics for application compatibility issues that may affect your app:</span></span>
+<span data-ttu-id="add51-103">.NET Framework 4.6.2 から 4.7.1 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="add51-103">If you are migrating from the .NET Framework 4.6.2 to 4.7.1, review the following topics for application compatibility issues that may affect your app:</span></span>
 
-## <a name="aspnet"></a><span data-ttu-id="5ef92-104">ASP.NET</span><span class="sxs-lookup"><span data-stu-id="5ef92-104">ASP.NET</span></span>
+## <a name="aspnet"></a><span data-ttu-id="add51-104">ASP.NET</span><span class="sxs-lookup"><span data-stu-id="add51-104">ASP.NET</span></span>
 
-[!include[ASP.NET Accessibility Improvements in .NET Framework 4.7.1](~/includes/migration-guide/retargeting/asp/aspnet-accessibility-improvements-net-framework-471.md)]
+[!INCLUDE[ASP.NET Accessibility Improvements in .NET Framework 4.7.1](~/includes/migration-guide/retargeting/asp/aspnet-accessibility-improvements-net-framework-471.md)]
 
-[!include[HttpRuntime.AppDomainAppPath Throws a NullReferenceException](~/includes/migration-guide/retargeting/asp/httpruntimeappdomainapppath-throws-nullreferenceexception.md)]
+[!INCLUDE[HttpRuntime.AppDomainAppPath Throws a NullReferenceException](~/includes/migration-guide/retargeting/asp/httpruntimeappdomainapppath-throws-nullreferenceexception.md)]
 
-[!include[Throttle concurrent requests per session](~/includes/migration-guide/retargeting/asp/throttle-concurrent-requests-per-session.md)]
+[!INCLUDE[Throttle concurrent requests per session](~/includes/migration-guide/retargeting/asp/throttle-concurrent-requests-per-session.md)]
 
-## <a name="core"></a><span data-ttu-id="5ef92-105">コア</span><span class="sxs-lookup"><span data-stu-id="5ef92-105">Core</span></span>
+## <a name="core"></a><span data-ttu-id="add51-105">コア</span><span class="sxs-lookup"><span data-stu-id="add51-105">Core</span></span>
 
-[!include[SerialPort background thread exceptions](~/includes/migration-guide/retargeting/core/serialport-background-thread-exceptions.md)]
+[!INCLUDE[SerialPort background thread exceptions](~/includes/migration-guide/retargeting/core/serialport-background-thread-exceptions.md)]
 
-[!include[ServiceBase doesn't propagate OnStart exceptions](~/includes/migration-guide/retargeting/core/servicebase-doesnt-propagate-onstart-exceptions.md)]
+[!INCLUDE[ServiceBase doesn't propagate OnStart exceptions](~/includes/migration-guide/retargeting/core/servicebase-doesnt-propagate-onstart-exceptions.md)]
 
-## <a name="networking"></a><span data-ttu-id="5ef92-106">ネットワーキング</span><span class="sxs-lookup"><span data-stu-id="5ef92-106">Networking</span></span>
+## <a name="networking"></a><span data-ttu-id="add51-106">ネットワーキング</span><span class="sxs-lookup"><span data-stu-id="add51-106">Networking</span></span>
 
-[!include[Default value of ServicePointManager.SecurityProtocol is SecurityProtocolType.System.Default](~/includes/migration-guide/retargeting/networking/default-value-servicepointmanagersecurityprotocol.md)]
+[!INCLUDE[Default value of ServicePointManager.SecurityProtocol is SecurityProtocolType.System.Default](~/includes/migration-guide/retargeting/networking/default-value-servicepointmanagersecurityprotocol.md)]
 
-[!include[SslStream supports TLS Alerts](~/includes/migration-guide/retargeting/networking/sslstream-supports-tls-alerts.md)]
+[!INCLUDE[SslStream supports TLS Alerts](~/includes/migration-guide/retargeting/networking/sslstream-supports-tls-alerts.md)]
 
-## <a name="security"></a><span data-ttu-id="5ef92-107">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="5ef92-107">Security</span></span>
+## <a name="security"></a><span data-ttu-id="add51-107">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="add51-107">Security</span></span>
 
-[!include[CspParameters.ParentWindowHandle now expects HWND value](~/includes/migration-guide/retargeting/security/cspparametersparentwindowhandle-now-expects-hwnd-value.md)]
+[!INCLUDE[CspParameters.ParentWindowHandle now expects HWND value](~/includes/migration-guide/retargeting/security/cspparametersparentwindowhandle-now-expects-hwnd-value.md)]
 
-[!include[Default SignedXML and SignedXMS algorithms changed to SHA256](~/includes/migration-guide/retargeting/security/default-signedxml-signedxms-algorithms-changed-sha256.md)]
+[!INCLUDE[Default SignedXML and SignedXMS algorithms changed to SHA256](~/includes/migration-guide/retargeting/security/default-signedxml-signedxms-algorithms-changed-sha256.md)]
 
-[!include[SignedXml.GetPublicKey returns RSACng on net462 (or lightup) without retargeting change](~/includes/migration-guide/retargeting/security/signedxmlgetpublickey-returns-rsacng-on-net462-or-lightup-without.md)]
+[!INCLUDE[SignedXml.GetPublicKey returns RSACng on net462 (or lightup) without retargeting change](~/includes/migration-guide/retargeting/security/signedxmlgetpublickey-returns-rsacng-on-net462-or-lightup-without.md)]
 
-[!include[SslStream supports TLS Alerts](~/includes/migration-guide/retargeting/networking/sslstream-supports-tls-alerts.md)]
+[!INCLUDE[SslStream supports TLS Alerts](~/includes/migration-guide/retargeting/networking/sslstream-supports-tls-alerts.md)]
 
-## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="5ef92-108">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="5ef92-108">Windows Communication Foundation (WCF)</span></span>
+## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="add51-108">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="add51-108">Windows Communication Foundation (WCF)</span></span>
 
-[!include[Improved accessibility for some .NET SDK tools](~/includes/migration-guide/retargeting/wcf/improved-accessibility-for-some-net-sdk-tools.md)]
+[!INCLUDE[Improved accessibility for some .NET SDK tools](~/includes/migration-guide/retargeting/wcf/improved-accessibility-for-some-net-sdk-tools.md)]
 
-[!include[Serialization of control characters with DataContractJsonSerializer is now compatible with ECMAScript V6 and V8](~/includes/migration-guide/retargeting/wcf/serialization-control-characters-with-datacontractjsonserializer-now.md)]
+[!INCLUDE[Serialization of control characters with DataContractJsonSerializer is now compatible with ECMAScript V6 and V8](~/includes/migration-guide/retargeting/wcf/serialization-control-characters-with-datacontractjsonserializer-now.md)]
 
-[!include[WCF message security now is able to use TLS1.1 and TLS1.2](~/includes/migration-guide/retargeting/wcf/wcf-message-security-now-able-use-tls11-tls12.md)]
+[!INCLUDE[WCF message security now is able to use TLS1.1 and TLS1.2](~/includes/migration-guide/retargeting/wcf/wcf-message-security-now-able-use-tls11-tls12.md)]
 
-## <a name="windows-forms"></a><span data-ttu-id="5ef92-109">Windows フォーム</span><span class="sxs-lookup"><span data-stu-id="5ef92-109">Windows Forms</span></span>
+## <a name="windows-forms"></a><span data-ttu-id="add51-109">Windows フォーム</span><span class="sxs-lookup"><span data-stu-id="add51-109">Windows Forms</span></span>
 
-[!include[Accessibility improvements in Windows Forms controls](~/includes/migration-guide/retargeting/winforms/accessibility-improvements-windows-forms-controls.md)]
+[!INCLUDE[Accessibility improvements in Windows Forms controls](~/includes/migration-guide/retargeting/winforms/accessibility-improvements-windows-forms-controls.md)]
 
-## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="5ef92-110">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="5ef92-110">Windows Presentation Foundation (WPF)</span></span>
+## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="add51-110">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="add51-110">Windows Presentation Foundation (WPF)</span></span>
 
-[!include[Accessibility improvements in WPF](~/includes/migration-guide/retargeting/wpf/accessibility-improvements-wpf.md)]
+[!INCLUDE[Accessibility improvements in WPF](~/includes/migration-guide/retargeting/wpf/accessibility-improvements-wpf.md)]
 
-[!include[Calls to System.Windows.Input.PenContext.Disable on touch-enabled systems may throw an ArgumentException](~/includes/migration-guide/retargeting/wpf/calls-systemwindowsinputpencontextdisable-on-touch-enabled-systems-may-throw.md)]
+[!INCLUDE[Calls to System.Windows.Input.PenContext.Disable on touch-enabled systems may throw an ArgumentException](~/includes/migration-guide/retargeting/wpf/calls-systemwindowsinputpencontextdisable-on-touch-enabled-systems-may-throw.md)]
 
-[!include[NullReferenceException in exception handling code from ImageSourceConverter.ConvertFrom](~/includes/migration-guide/retargeting/wpf/nullreferenceexception-exception-handling-code-from.md)]
+[!INCLUDE[NullReferenceException in exception handling code from ImageSourceConverter.ConvertFrom](~/includes/migration-guide/retargeting/wpf/nullreferenceexception-exception-handling-code-from.md)]
 
-[!include[Selector SelectionChanged event and SelectedValue property](~/includes/migration-guide/retargeting/wpf/selector-selectionchanged-event-selectedvalue-property.md)]
+[!INCLUDE[Selector SelectionChanged event and SelectedValue property](~/includes/migration-guide/retargeting/wpf/selector-selectionchanged-event-selectedvalue-property.md)]
 
-[!include[TabControl SelectionChanged event and SelectedContent property](~/includes/migration-guide/retargeting/wpf/tabcontrol-selectionchanged-event-selectedcontent-property.md)]
+[!INCLUDE[TabControl SelectionChanged event and SelectedContent property](~/includes/migration-guide/retargeting/wpf/tabcontrol-selectionchanged-event-selectedcontent-property.md)]
 
-[!include[The default hash algorithm for WPF PackageDigitalSignatureManager is now SHA256](~/includes/migration-guide/retargeting/wpf/default-hash-algorithm-for-wpf-packagedigitalsignaturemanager-now-sha256.md)]
+[!INCLUDE[The default hash algorithm for WPF PackageDigitalSignatureManager is now SHA256](~/includes/migration-guide/retargeting/wpf/default-hash-algorithm-for-wpf-packagedigitalsignaturemanager-now-sha256.md)]
 
-[!include[WPF Grid allocation of space to star-columns](~/includes/migration-guide/retargeting/wpf/wpf-grid-allocation-space-star-columns.md)]
+[!INCLUDE[WPF Grid allocation of space to star-columns](~/includes/migration-guide/retargeting/wpf/wpf-grid-allocation-space-star-columns.md)]
 
-[!include[WPF Pointer-Based Touch Stack](~/includes/migration-guide/retargeting/wpf/wpf-pointer-based-touch-stack.md)]
+[!INCLUDE[WPF Pointer-Based Touch Stack](~/includes/migration-guide/retargeting/wpf/wpf-pointer-based-touch-stack.md)]
 
-## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="5ef92-111">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="5ef92-111">Windows Workflow Foundation (WF)</span></span>
+## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="add51-111">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="add51-111">Windows Workflow Foundation (WF)</span></span>
 
-[!include[Accessibility improvements in Windows Workflow Foundation (WF) workflow designer](~/includes/migration-guide/retargeting/wf/accessibility-improvements-windows-workflow-foundation-wf-designer.md)]
+[!INCLUDE[Accessibility improvements in Windows Workflow Foundation (WF) workflow designer](~/includes/migration-guide/retargeting/wf/accessibility-improvements-windows-workflow-foundation-wf-designer.md)]
 
-[!include[Workflow checksums changed from MD5 to SHA1](~/includes/migration-guide/retargeting/wf/workflow-checksums-changed-from-md5-sha1.md)]
+[!INCLUDE[Workflow checksums changed from MD5 to SHA1](~/includes/migration-guide/retargeting/wf/workflow-checksums-changed-from-md5-sha1.md)]
 
